Suspend not working when some cores are disabled through cpufreq
Brief summary of the problem:
When I disable some cores through cpufeq, the system cannot go into suspend modus anymore. The screen is blank and cannot be brought to live afterwards. But led indicator isn't showing suspend (blinking) and the system is generating a lot of heat (like it is still running). Trying to revive the system, doesn't work. whatever I do, everything stays black. Only remedy is cold reset works. If I reenable all cores, suspend is working again.
Hardware description:
- Laptop: ASUS ROG Strix G513QY
- CPU: AMD® Ryzen 9 5900hx with radeon graphics × 16
- GPU: AMD Radeon RX 6800M (AMD® Navy_flounder / AMD® Renoir)
- System Memory: 16384 MB,, dual-channel DDR4-3200
- Display(s): 15.60 inch 16:9, 1920 x 1080 pixel 141 PPI, Sharp SHP152C, IPS, 300 Hz
- Type of Diplay Connection: internal screen
System information:
- Distro name and Version: Fedora 34 (updated to latest) with asus rog kernel
- Kernel version: Linux fedora 5.14.3-300.rog.fc34.x86_64
- Custom kernel: https://copr.fedorainfracloud.org/coprs/lukenukem/asus-linux/ https://gitlab.com/asus-linux/fedora-kernel/-/tree/rog-5.14
- AMD package version: no extra package
How to reproduce the issue:
- Install cpufeq gnome extension (https://extensions.gnome.org/extension/1082/cpufreq/)
- Click on the cpu freq extention in the top bar
- Slide the "cores online" from 16 to 3
- close lid of laptop Expected result: the laptop goes into suspend Actual result: the laptop stay on but screen is now always black and keyboard input is ignored
Attached files:
I cannot take dmesg right after wrong suspend, because the system hangs. But this is the dmesg right after setting cores to 3 (so between step 3 and 4 in the how to reproduce) dmesg.txt